src/test/resources/compilation-status/one-file-one-error.txt
src\main\Main.java:4: error: cannot find symbol
    in bad_name = 3;
    ^
  symbol:   class in
  location: class Main
1 error